--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Verdana, sans-serif;
+    font-family: Arial, Verdana;
     background-color: #000000;
     color: #ffffff;
     margin: 20px 20px 0 20px;
@@ -44,8 +44,7 @@ div {
     background-color: #FF0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: solid 2px;
-    border-left: solid 5px;
+    border-width: 0 0 2px 5px;
 }
 
 .red > p {
@@ -56,8 +55,7 @@ div {
     background-color: #0000FF;
     text-align: left;
     margin-right: 50px;
-    border-top: solid 2px;
-    border-right: solid 5px;
+    border-width: 2px 5px 0 0;
 }
 
 .blue > h2, p {
@@ -68,8 +66,7 @@ div {
     background-color: #FFFF00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: solid 2px;
-    border-left: solid 5px;
+    border-width: 0 0 2px 5px;
 }
 
 .yellow > p {
@@ -80,8 +77,7 @@ div {
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-top: solid 2px;
-    border-right: solid 5px;
+    border-width: 2px 5px 0 0;
 }
 
 .green > p {
@@ -97,5 +93,5 @@ footer {
 footer > p {
     font-size: 20px;
     text-align: right;
-    padding: 15px 15px 15px;
+    padding: 15px 15px 15px 0;
 }
